--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
     <button mat-icon-button (click)="search()">
     <mat-icon>search</mat-icon>
     </button>
-    <mat-form-field>
+    <mat-form-field floatLabel="never">
       <input matInput [(ngModel)]="searchName" placeholder="Auteur..." [formControl]="form" [matAutocomplete]="auto">
       <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" [displayWith]="displayFn">
         <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
@@ -14,7 +14,7 @@
       </mat-autocomplete>
     </mat-form-field>
   
-    <mat-form-field>
+    <mat-form-field floatLabel="never">
       <mat-select placeholder="Statut..." [(value)]="searchStatus">
         <mat-option >-</mat-option>
         <mat-option value="IN_PROGRESS">en cours</mat-option>
@@ -24,7 +24,7 @@
       </mat-select>
     </mat-form-field>
   
-    <mat-form-field>
+    <mat-form-field floatLabel="never">
       <mat-select placeholder="Patron..." [(value)]="searchPatron">
         <mat-option >-</mat-option>
         <mat-option value="Aide financière">aide financière</mat-option>
@@ -35,12 +35,12 @@
       </mat-select>
     </mat-form-field>
   
-    <mat-form-field>
+    <mat-form-field floatLabel="never">
       <input matInput [matDatepicker]="pickerEntre" placeholder="Entre le" [(ngModel)]="dateFrom">
       <mat-datepicker-toggle matSuffix [for]="pickerEntre"></mat-datepicker-toggle>
       <mat-datepicker #pickerEntre></mat-datepicker>
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field floatLabel="never">
       <input matInput [matDatepicker]="pickerEtLe" placeholder="et le" [(ngModel)]="dateTo">
       <mat-datepicker-toggle matSuffix [for]="pickerEtLe"></mat-datepicker-toggle>
       <mat-datepicker #pickerEtLe></mat-datepicker>
@@ -48,7 +48,7 @@
   </ng-container>
 </mat-toolbar>
 
-<mat-form-field>
+<mat-form-field floatLabel="never">
   <mat-select id="option-affichage" placeholder="Option d'affichage" disableRipple [(ngModel)]="vueCarte">
     <mat-option value="true">Cartes</mat-option>
     <mat-option value="false">Listes</mat-option>
