--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -19,9 +19,29 @@
   width: 100%;
 }
 
-#barre-recherche {
-  background-color: #dfdfdf;
+.searchBar {
+  background: linear-gradient(#f3f3f3, #acacac);
   color: black;
+  font-size: 14px;
+}
+
+.searchBarField {
+  font-size: inherit;
+}
+
+#searchIcon {
+  font-size: 18px;
+}
+
+.searchBarField .mat-form-field-infix {
+  border-top: 0;
+  padding-bottom: 0px;
+}
+.searchBarField .mat-form-field-wrapper {
+  padding-bottom: 0px;
+}
+.searchBarField .mat-form-field-underline {
+  display: none;
 }
 
 #a-completer-ligne {
