--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,8 @@
 
-<mat-toolbar id="barre-recherche">
-  <ng-container>
+<mat-toolbar class="searchBar">
+  <div>
     
-    <button mat-icon-button (click)="search()">
-    <mat-icon>search</mat-icon>
-    </button>
-    <mat-form-field floatLabel="never">
+    <mat-form-field floatLabel="never" class="searchBarField">
       <input matInput [(ngModel)]="searchName" placeholder="Auteur..." [formControl]="form" [matAutocomplete]="auto">
       <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" [displayWith]="displayFn">
         <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
@@ -14,7 +11,7 @@
       </mat-autocomplete>
     </mat-form-field>
   
-    <mat-form-field floatLabel="never">
+    <mat-form-field floatLabel="never" class="searchBarField">
       <mat-select placeholder="Statut..." [(value)]="searchStatus">
         <mat-option >-</mat-option>
         <mat-option value="IN_PROGRESS">en cours</mat-option>
@@ -24,7 +21,7 @@
       </mat-select>
     </mat-form-field>
   
-    <mat-form-field floatLabel="never">
+    <mat-form-field floatLabel="never" class="searchBarField">
       <mat-select placeholder="Patron..." [(value)]="searchPatron">
         <mat-option >-</mat-option>
         <mat-option value="Aide financière">aide financière</mat-option>
@@ -35,17 +32,21 @@
       </mat-select>
     </mat-form-field>
   
-    <mat-form-field floatLabel="never">
+    <mat-form-field floatLabel="never" class="searchBarField">
       <input matInput [matDatepicker]="pickerEntre" placeholder="Entre le" [(ngModel)]="dateFrom">
       <mat-datepicker-toggle matSuffix [for]="pickerEntre"></mat-datepicker-toggle>
       <mat-datepicker #pickerEntre></mat-datepicker>
     </mat-form-field>
-    <mat-form-field floatLabel="never">
+    <mat-form-field floatLabel="never" class="searchBarField">
       <input matInput [matDatepicker]="pickerEtLe" placeholder="et le" [(ngModel)]="dateTo">
       <mat-datepicker-toggle matSuffix [for]="pickerEtLe"></mat-datepicker-toggle>
       <mat-datepicker #pickerEtLe></mat-datepicker>
     </mat-form-field>
-  </ng-container>
+
+    <button mat-icon-button (click)="search()">
+      <i class="material-icons" id="searchIcon">search</i>
+    </button>
+  </div>
 </mat-toolbar>
 
 <mat-form-field floatLabel="never">
