--- a/client/src/app/file-uploader/file-uploader.component.css
+++ b/client/src/app/file-uploader/file-uploader.component.css
@@ -9,10 +9,7 @@ i:first-of-type {
     border-radius: 20px;
     font-size: 14px;
     cursor: pointer;
-}
-
-#label:hover {
-    box-shadow: 5px 6px 5px -2px rgba(112,101,112,1);
+    margin-top: 10px;
 }
 
 input {
@@ -23,6 +20,7 @@ input {
 button {
     background: linear-gradient(to bottom, rgba(184,198,223,1) 0%,rgba(109,136,183,1) 100%); 
     margin-bottom: 5px;
+    margin-top: 15px;
 }
 
 h4 {
@@ -39,4 +37,10 @@ h4 {
     flex-direction: column;
     align-items: center;
     border: 1px solid rgba(109,136,183,1);
+}
+
+#container /deep/.mat-chip-list-wrapper {
+    flex-direction: column !important;
+    margin-right: 5px;
+    margin-left: 5px;
 }
