--- a/client/src/app/file-uploader/file-uploader.component.html
+++ b/client/src/app/file-uploader/file-uploader.component.html
@@ -11,7 +11,7 @@
       <i class="material-icons"> attachment </i>
     </label>
     <input id="files" type="file" (change)="fileChangeEvent($event)" multiple>
-    <mat-chip-list>
+    <mat-chip-list class="files-to-upload">
       <mat-chip *ngFor="let file of filesToUpload">
         {{file.name}}
       </mat-chip>
