ajout de pièce jointes bloqué en mode view

--- a/client/src/app/edition/edition.component.html
+++ b/client/src/app/edition/edition.component.html
@@ -24,7 +24,7 @@
           </mat-chip>
         </mat-chip-list>
         <br>
-        <app-file-uploader></app-file-uploader>
+        <app-file-uploader [state]=state></app-file-uploader>
         <br>
     <mat-grid-list cols="2" rowHeight="40px">
      <!--  <mat-grid-tile [colspan]="tiles[0].cols" [rowspan]="tiles[0].rows">
