--- a/client/src/app/templates/aide-financiere-form/app.af-form.html
+++ b/client/src/app/templates/aide-financiere-form/app.af-form.html
@@ -167,7 +167,7 @@
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let element">
               <button mat-icon-button color="warn"
-              (click)="onDelete(element)">x</button>
+              (click)="onDelete(element)"><mat-icon>delete_outline</mat-icon></button>
           </td>
       </ng-container>
       <ng-container matColumnDef="total">
