--- a/client/src/app/templates/annexe/annexe.component.html
+++ b/client/src/app/templates/annexe/annexe.component.html
@@ -378,7 +378,7 @@
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-icon-button color="warn"
-                    (click)="onDelete(element.id)">x</button>
+                    (click)="onDelete(element.id)"><mat-icon>delete_outline</mat-icon></button>
                 </td>
             </ng-container>
             
