--- a/client/src/app/templates/payment-form/paymentForm.component.html
+++ b/client/src/app/templates/payment-form/paymentForm.component.html
@@ -108,7 +108,7 @@
                 <th mat-header-cell *matHeaderCellDef></th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-icon-button color="warn"
-                    (click)="onDelete(element)">x</button>
+                    (click)="onDelete(element)"><mat-icon>delete_outline</mat-icon></button>
                 </td>
             </ng-container>
             <ng-container matColumnDef="totalFacture">
@@ -223,7 +223,7 @@
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
                 <button mat-icon-button color="warn"
-                (click)="onDeleteVentilation(element)">x</button>
+                (click)="onDeleteVentilation(element)"><mat-icon>delete_outline</mat-icon></button>
             </td>
         </ng-container>
         <ng-container matColumnDef="addVRow" id="addVRow">
