--- a/client/src/app/edition/edition.component.html
+++ b/client/src/app/edition/edition.component.html
@@ -40,7 +40,7 @@
         <button id="soumettre" mat-raised-button (click)="onSend()" color="primary">SOUMETTRE</button>
       </mat-grid-tile>
       <mat-grid-tile >
-        <button id="annuler" mat-raised-button (click)="onReturn()">RETOUR</button>
+        <button id="annuler" mat-raised-button (click)="onReturn()">ANNULER</button>
       </mat-grid-tile>
       <mat-grid-tile *ngIf="canCopy">
         <button id="copier" mat-raised-button (click)="onCopy()">COPIER</button>
