UI: Éliminer les différents fonts

--- a/client/src/app/login/login.component.css
+++ b/client/src/app/login/login.component.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 #login-container {
-    font-family: Verdana, Arial, Helvetica, sans-serif;
+    /* font-family: Verdana, Arial, Helvetica, sans-serif; */
     background: #CCC;
     width: 100%;
     height: 100%;
