--- a/client/src/app/templates/aide-financiere-form/app.af-form.css
+++ b/client/src/app/templates/aide-financiere-form/app.af-form.css
@@ -15,7 +15,7 @@
 
   div
   {
-    font-family: Roboto,'Helvetica Neue', sans-serif;
+    /* font-family: Roboto,'Helvetica Neue', sans-serif; */
   } /*KETE: déplacer sur stylesheet global*/
   
   div {
