--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -7,3 +7,7 @@
 /*#secondaryToolbar{*/
   /*background: #F7F6F6; color: #fff;*/
 /*}*/
+
+html, body {
+  font-family: Roboto,'Helvetica Neue', sans-serif;
+}
